--- a/webservice/.env
+++ b/webservice/.env
@@ -1,2 +1,3 @@
-BUCKET="my-cdtf-test-bucket20240430130049296100000001"
+BUCKET="my-cdtf-test-bucket20240430180150975100000001"
 DYNAMO_TABLE="posts"
+REGION="us-east-1""
